--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="Pages/Lab2Finish.html">Lab 2</a>
                     </li>
                     <li>
-                        <a href="Pages/Lab3Finish.html">Lab 3</a>
+                        <a href="Pages/Lab3.html">Lab 3</a>
                     </li>
 					<li>
 						<a href="#">Lab 4</a>
