--- a/Pages/Lab2Finish.html
+++ b/Pages/Lab2Finish.html
@@ -57,7 +57,7 @@
                         <a href="#">Lab 2</a>
                     </li>
                     <li>
-                        <a href="Lab3.html">Lab 3</a>
+                        <a href="Lab3Finish.html">Lab 3</a>
                     </li>
 					<li>
 						<a href="#">Lab 4</a>
