--- a/Pages/Lab2Finish.html
+++ b/Pages/Lab2Finish.html
@@ -60,7 +60,7 @@
                         <a href="Lab3Finish.html">Lab 3</a>
                     </li>
 					<li>
-						<a href="#">Lab 4</a>
+						<a href="Lab4Finish">Lab 4</a>
 					</li>
 					<li>
 						<a href="#">Lab 5</a>
