--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a href="Pages/Lab3Finish.html">Lab 3</a>
                     </li>
 					<li>
-						<a href="#">Lab 4</a>
+						<a href="Pages/Lab4Finish.html">Lab 4</a>
 					</li>
 					<li>
 						<a href="#">Lab 5</a>
