--- a/Pages/Lab4Finish.html
+++ b/Pages/Lab4Finish.html
@@ -184,7 +184,7 @@ return this._div;
 info.update = function (props) {
 this._div.innerHTML = '<h4>Reported Number of Structural Fires</h4>' +  (props ?
         props.FireCount + ' fires'
-        : 'Hover over a region');
+        : 'Hover over a hexagon');
 };
 
 info.addTo(map);
