--- a/Pages/Lab4Finish.html
+++ b/Pages/Lab4Finish.html
@@ -106,7 +106,7 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <p class="lead">Lab 4 Hexbin Mapping of Structural Fires 2013-2016</p>
+                <p class="lead">Lab 4 Hexbin Mapping of Structural Fires 2013-2016 for the Auckland Region</p>
 				
 				
 <div id= "map_1"style="width: 800px; height: 600px; margin:0 auto; "></div>
