--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<a href="Pages/Lab4Finish.html">Lab 4</a>
 					</li>
 					<li>
-						<a href="#">Lab 5</a>
+						<a href="Pages/Lab5Finish.html">Lab 5</a>
 					</li>
 					<li>
 						<a href="#">Project</a>
