--- a/Pages/Lab5Finish.html
+++ b/Pages/Lab5Finish.html
@@ -112,8 +112,8 @@
 	<div id="legend"><div id="legendGradient" style="background: -webkit-linear-gradient(left, rgb(125, 255, 0), rgb(255, 255, 0), rgb(255, 0, 0));"></div></div>
 	<div id="text">0.0<span style="white-space:pre">					Magnitutde					</span><span style="white-space:pre">4.0+</span></div> 
 	
-	<p>Earthquake Data from Geonet and Google maps API</p>
-	<p><a href="https://wfs.geonet.org.nz/">GeoNet</a></p>
+	<p>Earthquake Data from Geonet and Google Maps API</p>
+	<p><a href="https://wfs.geonet.org.nz/">www.geonet.org.nz</a></p>
 <script>
       var map;
       function initMap() {
