--- a/Pages/Lab5Finish.html
+++ b/Pages/Lab5Finish.html
@@ -109,7 +109,7 @@
 				
 				
     <div id="map"></div>
-	<div id="legend"><div id="legendGradient" style="background: -webkit-linear-gradient(left, rgb(125, 255, 0), rgb(255, 255, 0), rgb(255, 0, 0));"></div></div>
+	<div id="legend" align ='left'><div id="legendGradient" style="background: -webkit-linear-gradient(left, rgb(125, 255, 0), rgb(255, 255, 0), rgb(255, 0, 0));"></div></div>
 	<div id="text" align ='left'>0.0<span style="white-space:pre">					Magnitutde					</span><span style="white-space:pre">4.0+</span></div> 
 	
 	<p>Earthquake Data from Geonet and Google Maps API</p>
