--- a/Pages/Lab5Finish.html
+++ b/Pages/Lab5Finish.html
@@ -108,7 +108,7 @@
                 <p class="lead">Lab 5 Map Streaming Data with Google Maps API</p>
 				
 				
-    <div id="map" style="width:100%; height:800px;></div>
+    <div id="map" class="container" style="width:100%; height:800px;></div>
 	<div id="legend"><div id="legendGradient" style="background: -webkit-linear-gradient(left, rgb(125, 255, 0), rgb(255, 255, 0), rgb(255, 0, 0));"></div></div>
 	<div id="text" align ='left'>0.0<span style="white-space:pre">					Magnitutde					</span><span style="white-space:pre">4.0+</span></div> 
 	
