--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<a href="Pages/Lab5Finish.html">Lab 5</a>
 					</li>
 					<li>
-						<a href="#">Project</a>
+						<a href="Pages/project.html">Project</a>
 					</li>
                 </ul>
             </div>
