--- a/Pages/project.html
+++ b/Pages/project.html
@@ -70,7 +70,7 @@ g.call(d3.axisBottom(x)
 
 d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
-	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.2015); })
+	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
 
 function ready(error, us) {
@@ -81,7 +81,7 @@ function ready(error, us) {
     .selectAll("path")
     .data(topojson.feature(us, us.objects.states).features)
     .enter().append("path")
-      .attr("fill", function(d) { return color(d.2015 = povertylevel.get(d.id)); })
+      .attr("fill", function(d) { return color(d.twentyfifteen = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
       .text(function(d) { return d.rate + "%"; });
@@ -92,7 +92,7 @@ function ready(error, us) {
       .attr("d", path);
 }
 
-function ready2010(error, us) {
+function readytwentyten(error, us) {
   if (error) throw error;
 
   svg.append("g")
@@ -100,7 +100,7 @@ function ready2010(error, us) {
     .selectAll("path")
     .data(topojson.feature(us, us.objects.states).features)
     .enter().append("path")
-      .attr("fill", function(d) { return color(d.2010 = povertylevel.get(d.id)); })
+      .attr("fill", function(d) { return color(d.twentyten = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
       .text(function(d) { return d.rate + "%"; });
