--- a/Pages/project.html
+++ b/Pages/project.html
@@ -2,16 +2,22 @@
 <meta charset="utf-8">
 <style>
 
-.counties {
-  fill: none;
-}
-
 .states {
-  fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
+	fill: #e3e3e3;
+	stroke: white;
 }
-
+.states	:hover {
+	stroke: white;
+	stroke-width: 3;
+}
+.state-borders {
+  fill: none;
+  stroke: #333;
+  stroke-width: 1;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
 </style>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
