--- a/Pages/project.html
+++ b/Pages/project.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-
-.states {
-	fill: #e3e3e3;
-	stroke: white;
-}
-.states	:hover {
-	stroke: white;
-	stroke-width: 3;
-}
-.state-borders {
+.counties {
   fill: none;
-  stroke: #333;
-  stroke-width: 1;
+}
+.states {
+  fill: none;
+  stroke: #fff;
   stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
 }
 </style>
 <svg width="960" height="600"></svg>
