--- a/Pages/project.html
+++ b/Pages/project.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-.counties {
-  fill: none;
-}
+	
 .states {
   fill: none;
   stroke: #fff;
   stroke-linejoin: round;
+}
+.states	:hover {
+	stroke: black;
+	stroke-width: 3;
 }
 </style>
 <svg width="960" height="600"></svg>
