--- a/Pages/project.html
+++ b/Pages/project.html
@@ -84,7 +84,7 @@ function ready(error, us) {
       .attr("fill", function(d) { return color(d.twentyfifteen = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
-      .text(function(d) { return d.name.twentyfifteen + "%"; })
+      .text(function(d) { return d.twentyfifteen + "%"; })
 
 
   svg.append("path")
@@ -104,7 +104,7 @@ function readytwentyten(error, us) {
       .attr("fill", function(d) { return color(d.twentyten = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
-      .text(function(d) { return d.name.twentyten + "%"; })
+      .text(function(d) { return d.twentyten + "%"; })
 
 
   svg.append("path")
