--- a/Pages/project.html
+++ b/Pages/project.html
@@ -19,27 +19,50 @@
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 <script>
 
-var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height");
+var width = 960,
+    height = 500,
+    active = d3.select(null);
 
+var projection = d3.geoAlbersUsa()
+    .scale(1000)
+    .translate([width / 2, height / 2]);
+	
+var zoom = d3.zoom() 
+    .scaleExtent([1, 8])
+    .on("zoom", zoomed);
+	
+var path = d3.geoPath()
+    .projection(projection);
 
+var svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height)
+    .on("click", stopped, true);
+
+svg.append("rect")
+    .attr("class", "background")
+    .attr("width", width)
+    .attr("height", height)
+    .on("click", reset);
+
+var g = svg.append("g");
+
+svg
+    .call(zoom);	
+	
 var povertylevel = d3.map();
-
-var path = d3.geoPath();
 	
 var x = d3.scaleLinear()
     .domain([0, 20])
     .rangeRound([600, 860]);
-
+	
 var color = d3.scaleThreshold()
     .domain([5, 10, 15, 20])
     .range(["#f2f0f7", "#cbc9e2", "#9e9ac8", "#6a51a3"]);
-
+	
 var g = svg.append("g")
     .attr("class", "key")
     .attr("transform", "translate(0,40)");
-
 g.selectAll("rect")
   .data(color.range().map(function(d) {
       d = color.invertExtent(d);
@@ -52,7 +75,7 @@ g.selectAll("rect")
     .attr("x", function(d) { return x(d[0]); })
     .attr("width", function(d) { return x(d[1]) - x(d[0]); })
     .attr("fill", function(d) { return color(d[0]); });
-
+	
 g.append("text")
     .attr("class", "caption")
     .attr("x", x.range()[0])
@@ -61,7 +84,7 @@ g.append("text")
     .attr("text-anchor", "start")
     .attr("font-weight", "bold")
     .text("Poverty level");
-
+	
 g.call(d3.axisBottom(x)
     .tickSize(13)
     .tickFormat(function(x, i) { return i ? x : x + "%"; })
@@ -70,13 +93,11 @@ g.call(d3.axisBottom(x)
     .remove();
 	
 d3.queue()
-	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
+	.defer(d3.json, "/mbostock/raw/4090846/us.json")
 	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
-
 function ready(error, us) {
   if (error) throw error;
-
   svg.append("g")
       .attr("class", "states")
     .selectAll("path")
@@ -84,33 +105,65 @@ function ready(error, us) {
     .enter().append("path")
       .attr("fill", function(d) { return color(d.twentyfifteen = povertylevel.get(d.id)); })
       .attr("d", path)
+	  .on("click", clicked)
     .append("title")
       .text(function(d) { return d.twentyfifteen + "%"; })
-
-
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
       .attr("class", "states")
       .attr("d", path);
 }
-
 function readytwentyten(error, us) {
   if (error) throw error;
-
   svg.append("g")
       .attr("class", "states")
     .selectAll("path")
     .data(topojson.feature(us, us.objects.states).features)
     .enter().append("path")
       .attr("fill", function(d) { return color(d.twentyten = povertylevel.get(d.id)); })
-      .attr("d", path)
+      .attr("d", path
+	  .on("click", clicked)
     .append("title")
       .text(function(d) { return d.twentyten + "%"; })
-
-
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
       .attr("class", "states")
       .attr("d", path);
+});
+
+function clicked(d) {
+  if (active.node() === this) return reset();
+  active.classed("active", false);
+  active = d3.select(this).classed("active", true);
+
+  var bounds = path.bounds(d),
+      dx = bounds[1][0] - bounds[0][0],
+      dy = bounds[1][1] - bounds[0][1],
+      x = (bounds[0][0] + bounds[1][0]) / 2,
+      y = (bounds[0][1] + bounds[1][1]) / 2,
+      scale = Math.max(1, Math.min(8, 0.9 / Math.max(dx / width, dy / height))),
+      translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+  svg.transition()
+      .duration(750)
+      .call( zoom.transform, d3.zoomIdentity.translate(translate[0],translate[1]).scale(scale) ); // updated for d3 v4
+}
+
+function reset() {
+  active.classed("active", false);
+  active = d3.select(null);
+
+  svg.transition()
+      .duration(750)
+      .call( zoom.transform, d3.zoomIdentity );
+}
+
+function zoomed() {
+  g.style("stroke-width", 1.5 / d3.event.transform.k + "px");
+  g.attr("transform", d3.event.transform);
+}
+
+function stopped() {
+  if (d3.event.defaultPrevented) d3.event.stopPropagation();
 }
 </script>
