--- a/Pages/project.html
+++ b/Pages/project.html
@@ -117,7 +117,7 @@ function ready(error, us) {
       .attr("d", path)
 	  .on("click", clicked)
     .append("title")
-      .text(function(d) { return d.twentyfifteen + "%"; })
+      .text(function(d) { return d.twentyfifteen + "%"; }))
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
       .attr("class", "states")
