--- a/Pages/project.html
+++ b/Pages/project.html
@@ -106,9 +106,9 @@ svg.selectAll(".place-label")
 	.data(topojson.feature(us, us.objects.states).features)
 	.enter().append("text")
 	.attr("class", "place-label")
-      .attr("transform", function(d) { return "translate(" + projection(d.geometry.coordinates) + ")"; })
-      .attr("x", function(d) { return d.geometry.coordinates[0] > -1 ? 6 : -6; })
+      .attr("transform", function(d) { return "translate(" + projection(d.geometries.coordinates) + ")"; })
+      .attr("x", function(d) { return d.geometries.coordinates[0] > -1 ? 6 : -6; })
       .attr("dy", ".35em")
-      .style("text-anchor", function(d) { return d.geometry.coordinates[0] > -1 ? "start" : "end"; })
+      .style("text-anchor", function(d) { return d.geometries.coordinates[0] > -1 ? "start" : "end"; })
       .text(function(d) { return d.properties.name; });
 </script>
