--- a/Pages/project.html
+++ b/Pages/project.html
@@ -110,5 +110,5 @@ svg.selectAll(".place-label")
       .attr("x", function(d) { return d.geometries.coordinates[0] > -1 ? 6 : -6; })
       .attr("dy", ".35em")
       .style("text-anchor", function(d) { return d.geometries.coordinates[0] > -1 ? "start" : "end"; })
-      .text(function(d) { return d.properties.name; });
+      .text(function(d) { return d.name; });
 </script>
