--- a/Pages/project.html
+++ b/Pages/project.html
@@ -101,5 +101,15 @@ function readytwentyten(error, us) {
       .attr("class", "states")
       .attr("d", path);
 }
-	
+
+var zoom = d3.behavior.zoom()
+    .on("zoom",function() {
+        g.attr("transform","translate("+ 
+            d3.event.translate.join(",")+")scale("+d3.event.scale+")");
+        g.selectAll("path")  
+            .attr("d", path.projection(projection)); 
+});
+
+svg.call(zoom)
+
 </script>
