--- a/Pages/project.html
+++ b/Pages/project.html
@@ -1,67 +1,29 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-
-.background {
+	
+	
+.states {
   fill: none;
-  pointer-events: all;
-}
-
-.feature {
-  fill: #ccc;
-  cursor: pointer;
-}
-
-.feature.active {
-  fill: orange;
-}
-
-.mesh {
-  fill: none;
-  stroke: #fff;
-  stroke-linecap: round;
+  stroke: black;
   stroke-linejoin: round;
 }
-
+.states	:hover {
+	stroke: black;
+	stroke-width: 3;
+}
 </style>
-<body>
-<script src="https://d3js.org/d3.v4.min.js"></script> <!-- Inclusion of d3 v4 -->
-<script src="https://d3js.org/topojson.v1.min.js"></script>
+<svg width="960" height="600"></svg>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v2.min.js"></script> 
 <script>
-
-var width = 960,
-    height = 500,
-    active = d3.select(null);
-
-var projection = d3.geoAlbersUsa()
-    .scale(1000)
-    .translate([width / 2, height / 2]);
-
-var zoom = d3.zoom()
-    .scaleExtent([1, 8])
-    .on("zoom", zoomed);
-
-var path = d3.geoPath()
-    .projection(projection);
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height)
-    .on("click", stopped, true);
-
-svg.append("rect")
-    .attr("class", "background")
-    .attr("width", width)
-    .attr("height", height)
-    .on("click", reset);
-
-var g = svg.append("g");
-
-svg
-    .call(zoom);
-
+var svg = d3.select("svg"),
+    width = +svg.attr("width"),
+    height = +svg.attr("height");
 var povertylevel = d3.map();
-
+var path = d3.geoPath();
+	
 var x = d3.scaleLinear()
     .domain([0, 20])
     .rangeRound([600, 860]);
@@ -97,81 +59,41 @@ g.call(d3.axisBottom(x)
     .tickValues(color.domain()))
   .select(".domain")
     .remove();
-
+	
 d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
 	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
-
-function(error, us) {
+function ready(error, us) {
   if (error) throw error;
-
-  g.selectAll("path")
-      .data(topojson.feature(us, us.objects.states).features)
+  svg.append("g")
+      .attr("class", "states")
+    .selectAll("path")
+    .data(topojson.feature(us, us.objects.states).features)
     .enter().append("path")
-	.attr("fill", function(d) { return color(d.twentyfifteen = povertylevel.get(d.id)); })
+      .attr("fill", function(d) { return color(d.twentyfifteen = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
       .text(function(d) { return d.twentyfifteen + "%"; })
-      .on("click", clicked);
-
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
-      .attr("class", "mesh")
+      .attr("class", "states")
       .attr("d", path);
 }
-
 function readytwentyten(error, us) {
   if (error) throw error;
-
-  g.selectAll("path")
-      .data(topojson.feature(us, us.objects.states).features)
+  svg.append("g")
+      .attr("class", "states")
+    .selectAll("path")
+    .data(topojson.feature(us, us.objects.states).features)
     .enter().append("path")
-	.attr("fill", function(d) { return color(d.twentyten = povertylevel.get(d.id)); })
+      .attr("fill", function(d) { return color(d.twentyten = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
       .text(function(d) { return d.twentyten + "%"; })
-      .on("click", clicked);
-
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
-      .attr("class", "mesh")
+      .attr("class", "states")
       .attr("d", path);
-
-function clicked(d) {
-  if (active.node() === this) return reset();
-  active.classed("active", false);
-  active = d3.select(this).classed("active", true);
-
-  var bounds = path.bounds(d),
-      dx = bounds[1][0] - bounds[0][0],
-      dy = bounds[1][1] - bounds[0][1],
-      x = (bounds[0][0] + bounds[1][0]) / 2,
-      y = (bounds[0][1] + bounds[1][1]) / 2,
-      scale = Math.max(1, Math.min(8, 0.9 / Math.max(dx / width, dy / height))),
-      translate = [width / 2 - scale * x, height / 2 - scale * y];
-
-  svg.transition()
-      .duration(750)
-      .call( zoom.transform, d3.zoomIdentity.translate(translate[0],translate[1]).scale(scale) );
 }
-
-function reset() {
-  active.classed("active", false);
-  active = d3.select(null);
-
-  svg.transition()
-      .duration(750)
-      .call( zoom.transform, d3.zoomIdentity );
-}
-
-function zoomed() {
-  g.style("stroke-width", 1.5 / d3.event.transform.k + "px");
-  g.attr("transform", d3.event.transform); }
-
-
-function stopped() {
-  if (d3.event.defaultPrevented) d3.event.stopPropagation();
-}
-
 </script>
