--- a/Pages/project.html
+++ b/Pages/project.html
@@ -18,6 +18,11 @@
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 <script>
+
+<select id = "opts">
+<option value="ds1">data1</option>
+<option value="ds2">data2</option>	
+	
 var svg = d3.select("svg"),
     width = +svg.attr("width"),
     height = +svg.attr("height");
