--- a/Pages/project.html
+++ b/Pages/project.html
@@ -19,8 +19,8 @@
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 
 <select id = "opts">
-<option value="ds1">data1</option>
-<option value="ds2">data2</option>
+<option value="Poverty Level 2015">data1</option>
+<option value="ds2">Poverty Level 2010</option>
 
 <script>	
 var svg = d3.select("svg"),
