--- a/Pages/project.html
+++ b/Pages/project.html
@@ -19,7 +19,7 @@
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 
 <select id = "opts">
-<option value="Poverty Level 2015">data1</option>
+<option value="ds1">Poverty Level 2015</option>
 <option value="ds2">Poverty Level 2010</option>
 
 <script>	
