--- a/Pages/project.html
+++ b/Pages/project.html
@@ -18,8 +18,8 @@
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 
-<button id="poverty2015" onclick='updateCost(costChange)'>Poverty Level 2015</button>
-<button id="poverty2010" onclick='updateCost(rateChange)'>Poverty Level 2010</button>
+<button id="poverty2015" onclick='ready()'>Poverty Level 2015</button>
+<button id="poverty2010" onclick='readytwentyten()'>Poverty Level 2010</button>
 
 <script>	
 var svg = d3.select("svg"),
