--- a/Pages/project.html
+++ b/Pages/project.html
@@ -20,7 +20,7 @@
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 
 <button id="poverty2015" onclick='povertytwentyfifteen()'>Poverty Level 2015</button>
-<button id="poverty2010" onclick='twentyten()'>Poverty Level 2010</button>
+<button id="poverty2010" onclick='povertytwentyten()'>Poverty Level 2010</button>
 
 <script>	
 var svg = d3.select("svg"),
