--- a/Pages/project.html
+++ b/Pages/project.html
@@ -20,7 +20,8 @@
 <script src="https://d3js.org/topojson.v2.min.js"></script> 
 
 <button id="poverty2015" onclick='povertytwentyfifteen()'>Poverty Level 2015</button>
-<button id="poverty2010" onclick='povertytwentyten()'>Poverty Level 2010</button>
+<button id="poverty2012" onclick='povertytwentyonetwo()'>Poverty Level 2012</button>
+<button id="poverty2009" onclick='povertytwentyzeronine()'>Poverty Level 2009</button>
 
 <script>	
 var svg = d3.select("svg"),
@@ -72,7 +73,7 @@ g.call(d3.axisBottom(x)
 	
 d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
-	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
+	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
 	
 function ready(error, us) {
@@ -93,7 +94,7 @@ function ready(error, us) {
       .attr("d", path);
 }
 	
-function readytwentyten(error, us) {
+function readytwentyonetwo(error, us) {
   if (error) throw error;
 	
   svg.append("g")
@@ -101,7 +102,26 @@ function readytwentyten(error, us) {
     .selectAll("path")
     .data(topojson.feature(us, us.objects.states).features)
     .enter().append("path")
-      .attr("fill", function(d) { return color(d.twentyten = povertylevel.get(d.id)); })
+      .attr("fill", function(d) { return color(d.twentyonetwo = povertylevel.get(d.id)); })
+      .attr("d", path)
+    .append("title")
+      .text(function(d) { return d.twentyten + "%"; })
+  svg.append("path")
+      .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
+      .attr("class", "states")
+      .attr("d", path);
+}
+}
+	
+function readytwentyzeroone(error, us) {
+  if (error) throw error;
+	
+  svg.append("g")
+      .attr("class", "states")
+    .selectAll("path")
+    .data(topojson.feature(us, us.objects.states).features)
+    .enter().append("path")
+      .attr("fill", function(d) { return color(d.twentyzeroone = povertylevel.get(d.id)); })
       .attr("d", path)
     .append("title")
       .text(function(d) { return d.twentyten + "%"; })
@@ -113,15 +133,21 @@ function readytwentyten(error, us) {
 function povertytwentyfifteen() {
 	d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
-	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
+	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
 
 }
-function povertytwentyten() {
+function povertytwentyonetwo() {
 	d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
-	.defer(d3.csv, "Book1.csv", function(d) { povertylevel.set(d.id, +d.twentyten); })
+	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyonetwo); })
 	.await(ready);
 
+}
+function povertytwentyzeronine() {
+	d3.queue()
+	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
+	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyzeroone); })
+	.await(ready);
 }
 </script>
