--- a/Pages/project.html
+++ b/Pages/project.html
@@ -73,7 +73,7 @@ g.call(d3.axisBottom(x)
 	
 d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
-	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen +d.name); })
+	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.name +d.twentyfifteen); })
 	.await(ready);
 	
 function ready(error, us) {
