--- a/Pages/project.html
+++ b/Pages/project.html
@@ -12,7 +12,18 @@
 	stroke: black;
 	stroke-width: 3;
 }
-
+.tooltip {   
+  position: absolute;           
+  text-align: center;           
+  width: 150px;                  
+  height: 25px;                 
+  padding: 2px;             
+  font-size: 10px;     
+  background: #FFFFE0;
+  border: 1px;      
+  border-radius: 8px;           
+  pointer-events: none;         
+}
 </style>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -76,6 +87,16 @@ d3.queue()
 	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
 	
+ function ready(error, map, data) {
+   var rateById = {};
+   var nameById = {};
+
+   data.forEach(function(d) {
+    rateByIdtwentyfifteen[d.id] = +d.twentyfifteen;
+    nameByIdtwentyfifteen[d.id] = d.name;
+  });
+  
+	
 function ready(error, us) {
   if (error) throw error;
 	
@@ -93,6 +114,21 @@ function ready(error, us) {
       .attr("class", "states")
       .attr("d", path);
 }
+  .on("mouseover", function(d) {
+    d3.select(this).transition().duration(300).style("opacity", 1);
+    div.transition().duration(300)
+    .style("opacity", 1)
+    div.text(nameByIdtwentyfifteen[d.properties.region] + " : " + rateByIdtwentyfifteen[d.properties.region])
+    .style("left", (d3.event.pageX) + "px")
+    .style("top", (d3.event.pageY -30) + "px");
+  })
+  .on("mouseout", function() {
+    d3.select(this)
+    .transition().duration(300)
+    .style("opacity", 0.8);
+    div.transition().duration(300)
+    .style("opacity", 0);
+  })
 	
 function readytwentyonetwo(error, us) {
   if (error) throw error;
