--- a/Pages/project.html
+++ b/Pages/project.html
@@ -75,7 +75,12 @@ d3.queue()
 	.defer(d3.json, "https://d3js.org/us-10m.v1.json")
 	.defer(d3.csv, "threeperiods.csv", function(d) { povertylevel.set(d.id, +d.twentyfifteen); })
 	.await(ready);
-	
+
+var datawithid = {};
+	maptemplate.forEach(function(d) { datawithid[d.id] = +d.twentyfifteen; });
+var statewithid = {};
+	maptemplate.forEach(function)(d) { statewithid[d.id] = d.name;});
+
 function ready(error, us) {
   if (error) throw error;
 	
