--- a/Pages/project.html
+++ b/Pages/project.html
@@ -79,7 +79,7 @@ d3.queue()
 var datawithid = {};
 	maptemplate.forEach(function(d) { datawithid[d.id] = +d.twentyfifteen; });
 var statewithid = {};
-	maptemplate.forEach(function)(d) { statewithid[d.id] = d.name;});
+	maptemplate.forEach(function(d) { statewithid[d.id] = d.name;});
 
 function ready(error, us) {
   if (error) throw error;
