--- a/Pages/project.html
+++ b/Pages/project.html
@@ -76,11 +76,11 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
+	<div class="container"></div>
 
-        <div class="row">
+	<div class="row"></div>
             <div class="col-lg-12 text-center">
-                <p class="lead">Project</p>
+		    <p class="lead">Project</p></div>
 <style>
 	
 	
