--- a/Pages/project.html
+++ b/Pages/project.html
@@ -101,7 +101,7 @@
 <button id="poverty2015" onclick='povertytwentyfifteen()'>Poverty Level 2015</button>
 <button id="poverty2012" onclick='povertytwentyonetwo()'>Poverty Level 2012</button>
 <button id="poverty2009" onclick='povertytwentyzeronine()'>Poverty Level 2009</button>
-	
+<div class ="container'>	
 <svg width="960" height="600"></svg>
 		    
 
