--- a/Pages/project.html
+++ b/Pages/project.html
@@ -76,7 +76,7 @@
     </nav>
 
     <!-- Page Content -->
-	<div class="container"></div>
+	<div class="container">
 
 	<div class="row"></div>
             <div class="col-lg-12 text-center">
