--- a/Pages/project.html
+++ b/Pages/project.html
@@ -57,13 +57,13 @@
                         <a href="Lab2Finish.html">Lab 2</a>
                     </li>
                     <li>
-                        <a href="#">Lab 3</a>
+                        <a href="Lab3Finish">Lab 3</a>
                     </li>
 					<li>
-						<a href="#">Lab 4</a>
+						<a href="Lab4Finish">Lab 4</a>
 					</li>
 					<li>
-						<a href="#">Lab 5</a>
+						<a href="Lab5Finish">Lab 5</a>
 					</li>
 					<li>
 						<a href="#">Project</a>
