--- a/Pages/Lab3Finish.html
+++ b/Pages/Lab3Finish.html
@@ -60,13 +60,13 @@
                         <a href="#">Lab 3</a>
                     </li>
 					<li>
-						<a href="Lab4Finish">Lab 4</a>
+						<a href="Lab4Finish.html">Lab 4</a>
 					</li>
 					<li>
-						<a href="#">Lab 5</a>
+						<a href="Lab5Finish.html">Lab 5</a>
 					</li>
 					<li>
-						<a href="#">Project</a>
+						<a href="project.html">Project</a>
 					</li>
                 </ul>
             </div>
