--- a/Pages/Lab5Finish.html
+++ b/Pages/Lab5Finish.html
@@ -91,7 +91,7 @@
 						<a href="#">Lab 5</a>
 					</li>
 					<li>
-						<a href="#">Project</a>
+						<a href="project.html">Project</a>
 					</li>
                 </ul>
             </div>
