--- a/Pages/project.html
+++ b/Pages/project.html
@@ -80,7 +80,7 @@
 
 	<div class="row"></div>
             <div class="col-lg-12 text-center">
-		    <p class="lead">Project</p></div>
+		    <p class="lead">Using d3.js to create to create an interactive choropleth map</p></div>
 <style>
 	
 	
@@ -229,5 +229,6 @@ function povertytwentyzeronine() {
 	.await(ready);
 }
 </script>	
-
+<p>Note that poverty level is an estimate, more information can be found<a href="https://www.census.gov/topics/income-poverty/poverty/guidance/poverty-measures.html"> here.</a></p>
+<p>
 </body>
