--- a/Pages/project.html
+++ b/Pages/project.html
@@ -80,7 +80,7 @@
 
 	<div class="row"></div>
             <div class="col-lg-12 text-center">
-		    <p class="lead">Using d3.js to create to create an interactive choropleth map</p></div>
+		    <p class="lead">Using d3.js to create an Interactive Choropleth map of Poverty level in the USA</p></div>
 <style>
 	
 	
@@ -230,5 +230,6 @@ function povertytwentyzeronine() {
 }
 </script>	
 <p>Note that poverty level is an estimate, more information can be found<a href="https://www.census.gov/topics/income-poverty/poverty/guidance/poverty-measures.html"> here.</a></p>
-<p>
+		<p>Data sourced from <a href="https://www.census.gov/"> United States Census Bureau</a></p>
+		<p>Inspired by Mike Bostocks <a href="https://bl.ocks.org/mbostock/4060606"> Choropleth Map</a> & <a href="https://bl.ocks.org/mbostock/4090848"> U.S States TopoJSON</a></p>
 </body>
